--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<style>*{background-color:black}</style><script src="module.js" type="module"></script>
+<!DOCTYPE html><html lang=en><meta content="width=device-width"name=viewport><meta content="FRCat's search enhancer"name=description><title>Smol Search</title><style>*{background-color:#000}</style><script src=module.js type=module></script>
